Webkit browsers overflow fix

--- a/style.css
+++ b/style.css
@@ -42,41 +42,28 @@ body {
     background-color: whitesmoke;
 }
 
-#_page_wrapper_ {
-    > #_page_ {
-        min-height: 100vh;
-        height: fit-content;
+#_page_ {
+    min-height: 100vh;
+    height: fit-content;
 
-        display: flex;
-        flex-direction: column;
-
-        > div {
-            background-color: burlywood;
-            width: 100%;
-        }
-    }
+    display: flex;
+    flex-direction: column;
 }
 
-#_header_wrapper_ {
-    box-shadow: var(--box-shadow-normal);
-    z-index: 1;
-    display: none;
-}
-
-#_footer_wrapper_ {
-    box-shadow: var(--box-shadow-normal);
-    z-index: 1;
-    display: none;
+#_page_ > div {
+    background-color: burlywood;
+    width: 100%;
 }
 
 #_content_wrapper_ {
     display: flex;
     flex-grow: 1;
-    #_content_ {
-        display: flex;
-        flex-direction: row;
-        flex: 1;
-    }
+}
+
+#_content_wrapper_ > #_content_ {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
 }
 
 #_image_section_wrapper_ {
@@ -121,21 +108,18 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100%;
+}
 
-    & #_artwork_container_ {
-    }
+#_artwork_container_ img {
+    max-width: 100%;
+    min-width: 50%;
+    max-height: 100%;
+    min-height: 100%;
 
-    & img {
-        max-width: 100%;
-        min-width: 50%;
-        max-height: 100%;
-        min-height: 100%;
+    object-fit: cover;
 
-        object-fit: cover;
-
-        padding: 0;
-        margin: 0;
-    }
+    padding: 0;
+    margin: 0;
 }
 
 #_form_section_wrapper_ {
@@ -147,15 +131,15 @@ body {
 
     background-color: rgba(201,255,228,1);
     padding: 15px;
+}
 
-    > #_form_section_ {
-        width: 100%;
-    }
+#_form_section_wrapper_ > #_form_section_ {
+    width: 100%;
 }
 
 form {
     display: flex;
-    flex: 1 1 0;
+    flex: 1 1 768px;
     flex-direction: column;
 
     /*
@@ -167,16 +151,16 @@ form {
     padding: 20px;
     margin: 0px;
 
-    max-width: 768px;
     min-width: 320px;
 }
 
 label {
-    flex: 1;
+    display: flex;
+    flex: 1 1 0;
+    flex-direction: column;
+
     font-size: var(--font-size-normal);
     font-weight: var(--font-weight-small);
-    display: flex;
-    flex-direction: column;
 
     padding: 5px;
     gap: 5px;
@@ -205,16 +189,17 @@ input {
     padding: 5px;
 
     max-width: 100%;
-    min-width: 100px;
+    min-width: 280px;
+}
 
-    &:focus {
-        outline-style:solid;
-        outline-color: burlywood;
-    }
-    &:invalid {
-        outline-style:solid;
-        outline-color: burlywood;
-    }
+input:focus {
+    outline-style:solid;
+    outline-color: burlywood;
+}
+
+input:invalid {
+    outline-style:solid;
+    outline-color: burlywood;
 }
 
 textarea {
@@ -230,14 +215,16 @@ textarea {
     border-radius: 5px;
     padding: 5px;
     border: 0px;
-    &:focus {
-        outline-style:solid;
-        outline-color: burlywood;
-    }
-    &:invalid {
-        outline-style:solid;
-        outline-color: burlywood;
-    }
+}
+
+textarea:focus {
+    outline-style:solid;
+    outline-color: burlywood;
+}
+
+textarea:invalid {
+    outline-style:solid;
+    outline-color: burlywood;
 }
 
 
@@ -251,10 +238,11 @@ p {
     font-size: var(--font-size-normal-xl);
     font-weight: var(--font-weight-normal);
     padding: 5px;
-    &.reference {
-        font-size: var(--font-size-mini);
-        font-weight: var(--font-weight-small);
-    }
+}
+
+p.reference {
+    font-size: var(--font-size-mini);
+    font-weight: var(--font-weight-small);
 }
 
 br {
@@ -266,23 +254,29 @@ br {
 #_main_form_input_ {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     flex: 1 1 0; 
     gap: 10px;
-    & > .input-column {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        flex: 1 1 0;
-        width: 100%;
-    }
+}
+
+#_main_form_input_ > .input-column {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1 1 0;
+    width: 100%;
 }
 
 @media (max-width: 979px) {
-    #_content_wrapper_ {
-        #_content_ {
-            flex-direction: column;
-        }
+    #_main_form_input_ {
+        /* Webkit browsers overflow fix */
+        display: flex;
+        flex-direction: row;
+        flex: 1 1 auto;
+    }
+
+    #_content_wrapper_ > #_content_ {
+        flex-direction: column;
     }
 
     #_form_section_wrapper_ {
